tests/ucc/bind/good/goto-2.c
int main(void)
{
loop:
    goto loop;

    return 0;
}
