tests/ucc/bind/bad/goto-no-label.c
int main(void)
{
    goto loop;
}
